0033765: Data Exchange, IGES Export - Missing Model Curves in transfer cache

Curve list should be not unique, list is recommended.
One curve can be used by multiple edges.